--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header .headerText span{
 }
 
 .image{
-    background-image: linear-gradient(rgba(0, 15, 200, 0.5), rgba(68, 74, 160, 0.5)), url('../images/image1.jpg');
+    background-image: linear-gradient(rgba(0, 15, 200, 0.5), rgba(68, 74, 160, 0.5)), url('../images/image3.jpg');
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -103,15 +103,30 @@ header .headerText span{
     margin-top: 2em;
 }
 
+.errorMessage{
+    background-color: red;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    position: relative;
+    top: 4rem;
+}
+
 @media only screen and (min-width: 768px){
+
     .body{
         display: grid;
         grid-template-columns: 1fr 1fr;
+    }
+    .body .mainArea{
+        display: grid;
     }
 
     .image{
         min-height: 100vh;
     }
+
+
 
 }
 
