--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,11 @@ header .headerText span{
     top: 4rem;
 }
 
+.result .textArea .temp{
+    font-weight: bolder;
+    font-size: larger;
+}
+
 @media only screen and (min-width: 768px){
 
     .body{
